--- a/src/app/textcontrol/textcontrol.component.html
+++ b/src/app/textcontrol/textcontrol.component.html
@@ -2,6 +2,6 @@
 
 <tx-document-editor
   class="text-control-container"
-  webSocketURL="wss://demos.textcontrol.com/ws/api/TXWebSocket?authToken=12388-22132-12133">
+  webSocketURL="wss://backend.textcontrol.com?access-token=mWSLUkSmxgWH3Rt6sKvS">
 </tx-document-editor>
 
