--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <h1>Main View</h1>
 
 <nav>
-  <a routerLink="/home" routerLinkActive="active">Home</a>
+  <a (click)="removeEditor()" routerLink="/home" routerLinkActive="active">Home</a>
   <br>
-  <a (click)="removeEditor()" routerLink="/textcontrol" routerLinkActive="active">Document Editor</a>
+  <a routerLink="/textcontrol" routerLinkActive="active">Document Editor</a>
 </nav>
 
 <router-outlet></router-outlet>
